fix : sticky + scroll hidden overflow

--- a/src/components/Collections/Collection/Filter/Attributes/style.scss
+++ b/src/components/Collections/Collection/Filter/Attributes/style.scss
@@ -6,6 +6,8 @@
 }
 
 .filter_attributes {
+    position: sticky;
+    top: 0;
     &_accordion {
         font-weight: 700;
         background-color: v.$fourth-color;
@@ -33,5 +35,4 @@
     align-items: center;
     padding: 4rem 2rem 0;
     flex-wrap: wrap;
-    overflow: auto;
 }
