--- a/src/components/Collections/Collection/Filter/style.scss
+++ b/src/components/Collections/Collection/Filter/style.scss
@@ -5,12 +5,15 @@
     flex-direction: column;
     padding: 2rem 2rem;
     background-color: v.$third-color;
+    overflow: hidden;
 }
 
 .filter_wrapper {
     display: flex;
     height: auto;
+    max-height: 900px;
     background-color: v.$second-color;
     border-radius: 1.2rem;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
