--- a/src/components/UI/Card/Card.scss
+++ b/src/components/UI/Card/Card.scss
@@ -7,23 +7,23 @@
     width: 260px;
     height: 380px;
     border-radius: 15px;
-    border: 1px solid black;
+    border: 1px solid v.$first-color;
     background-color: v.$third-color;
     overflow: hidden;
     margin: 1rem;
-
 
     &_img {
         width: 100%;
         height: 65%;
         border-radius: 15px;
         object-fit: cover;
-        transform:scale(0.95);
+        transform:scale(1);
         transition: .6s ease-in-out;
+        border: 1px solid v.$first-color;
 
         &:hover {
             transition: .4s ease-in-out;
-            transform:scale(1)
+            transform:scale(0.95)
         }
     }
 
